--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -192,12 +192,14 @@ background-size: cover;
 
 .intro-message{
     z-index: 4;
-
+    padding-top: 120px;
+    padding-bottom: 0;
     & >h2{
         text-shadow: none;
         font-size:2em;
         color:black;
         width: 650px;
         margin: 0 auto;
+        line-height: 45px;
     }
 }
