Added second image

--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -223,3 +223,15 @@ b{
         }
     }
 }
+
+.circular {
+    width: 400px;
+    height: 400px;
+    border-radius: 200px;
+    -webkit-border-radius: 200px;
+    -moz-border-radius: 200px;
+    &.second {
+        background-position: 10%;
+        background: url(../img/flame-picture-boiler-service-basingstoke-1.jpg) no-repeat;
+    }
+}
