--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -233,5 +233,6 @@ b{
     &.second {
         background-position: 10%;
         background: url(../img/flame-picture-boiler-service-basingstoke-1.jpg) no-repeat;
+        background-size:cover;
     }
 }
